@@ -1,11 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.610 2006/03/05 04:16:04 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.611 2006/03/05 04:25:04 agaffney Exp $
 
   4 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIPortage.py:
   create /tmp, /var/tmp, and /var/lib/portage with proper permissions
+  src/templates/x86ArchitectureTemplate.py:
+  fix checks for changed partitions so they will actually get deleted
 
   3 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIClientController.py:
